Use_Cases/VPS_Popcorn_Production/Kubernetes/kubernetes_CPPS_deployment_init_only.yml
apiVersion: v1
kind: Pod
metadata:
  name: 0-p-schema-init
spec:
  containers:
    - name: 0-p-schema-init
      image: koarch/vps_0_p_schema_init:0.17-amd64
      volumeMounts:
        - name: general
          mountPath: /etc/config/general.yml
          subPath: general.yml
        - name: 0-p-schema-init
          mountPath: /etc/config/0-p-schema-init.yml
          subPath: 0-p-schema-init.yml
      imagePullPolicy: Always
  restartPolicy: Never
  volumes:
    - name: general
      configMap:
        name: vps-use-case
        items:
          - key: general.yml
            path: general.yml
    - name: 0-p-schema-init
      configMap:
        name: vps-use-case
        items:
          - key: 0-p-schema-init.yml
            path: 0-p-schema-init.yml
