Use_Cases/VPS_Popcorn_Production/Kubernetes/api_knowledge_deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: 5-api-knowledge
  labels:
    app: 5-api-knowledge
spec:
  replicas: 1
  selector:
    matchLabels:
      app: 5-api-knowledge
  template:
    metadata:
      labels:
        app: 5-api-knowledge
    spec:
      containers:
        - name: 5-api-knowledge
          image: koarch/vps_5_api_knowledge:0.17-amd64
          ports:
            - containerPort: 8000

---
apiVersion: v1
kind: Service
metadata:
  name: api-knowledge-service
spec:
  selector:
    app: 5-api-knowledge
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
      name: 5-api-knowledge
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-knowledge-ingress
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
    kubernetes.io/ingress.class: "traefik"
    traefik.ingress.kubernetes.io/rule-type: "PathPrefixStrip"
    traefik.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - http:
        paths:
          - path: /knowledge_api
            pathType: Exact
            backend:
              service:
                name: api-knowledge-service
                port:
                  number: 80
